infra/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              name: http
    host: argocd.storage.prossertech.com
  tls:
  - hosts:
    - '*.storage.prossertech.com'
    secretName: prossertech-com-tls
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-grpc-ingress
#   namespace: argocd
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /argocd-grpc
#         pathType: Prefix
#         backend:
#           service:
#             name: argo-cd-argocd-server
#             port:
#               name: https
#     host: argo-grpc.storage.prossertech.com
#   tls:
#   - hosts:
#     - argo-grpc.storage.prossertech.com
#     secretName: prossertech-com-tls
